# zestoAI

./: README.md  config.py  pyproject.toml
api/: app.py
api/data/: min_wage.txt
